<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.amplonius.Vertretungsplan.gui.settings.Notification">

    <Switch
        android:id="@+id/enable_notification_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_notification_switch_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/pick_time_label"
        android:textSize="@dimen/textsize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_time_info" />

    <TimePicker
        android:id="@+id/settings_notifiction_time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/settings_notification_set_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="onClickSetTime"
            android:text="@string/set_time" />
    </RelativeLayout>

    <Switch
        android:paddingTop="20dp"
        android:id="@+id/offset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offset" />

</LinearLayout>